--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,23 +17,13 @@
         android:theme="@style/Theme.ProjectICT"
         tools:targetApi="31">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
+        <!--GOOGLE MAP API-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC9fygdMVh0rnWeN9TyVOvZFovMckTmX8I" />
 
+        <!--
 
-        <!-- Main launcher activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -42,8 +32,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Register activity -->
-        <activity android:name=".RegisterActivity" />
+        </activity> -->
+        <!--
+       <activity android:name=".RegisterActivity" />-->
 
 
         <activity
@@ -56,6 +47,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--
+       <activity
+           android:name=".DriverTrackingActivity"
+           android:exported="true">
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
+       </activity>
+       -->
 
     </application>
 
