--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-
+    <!-- Hardware & Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -24,71 +22,43 @@
         android:theme="@style/Theme.ProjectICT"
         tools:targetApi="31">
 
-        <!--BACKGROUND SERVICE-->
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC9fygdMVh0rnWeN9TyVOvZFovMckTmX8I" />
+
+        <!-- Foreground Location Service -->
         <service
             android:name=".BackgroundService"
             android:foregroundServiceType="location"
             android:exported="false" />
 
-        <!--GOOGLE MAP API-->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC9fygdMVh0rnWeN9TyVOvZFovMckTmX8I" />
-
-        <!--QR MODULE -->
+        <!-- Login Activity -->
         <activity
-            android:name=".DriverQr"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Register Activity -->
         <activity
-            android:name=".DriverTrackingActivity"
+            android:name=".RegisterActivity"
             android:exported="true" />
-        <!--QR MODULE -->
 
-
-        <!--
+        <!-- Driver QR + Tracking -->
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".DriverQr"
+            android:exported="true" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> -->
-        <!--
-       <activity android:name=".RegisterActivity" />-->
-
-
-<!--        <activity-->
-<!--            android:name=".MapsActivity"-->
-<!--            android:exported="true"-->
-<!--            android:label="@string/title_activity_maps">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
-
-        <!--
-       <activity
-           android:name=".DriverTrackingActivity"
-           android:exported="true">
-           <intent-filter>
-               <action android:name="android.intent.action.MAIN" />
-               <category android:name="android.intent.category.LAUNCHER" />
-           </intent-filter>
-       </activity>
-       -->
-
-
+        <!-- Student Tracker -->
+        <activity
+            android:name=".StudentTrack"
+            android:exported="true" />
 
     </application>
+
 
 </manifest>
