--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Hardware & Permissions -->
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -13,27 +12,24 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.ProjectICT"
+        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         tools:targetApi="31">
 
-        <!-- Google Maps API Key -->
+        <!-- Google Maps -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC9fygdMVh0rnWeN9TyVOvZFovMckTmX8I" />
 
-        <!-- Foreground Location Service -->
+        <!-- Foreground location service -->
         <service
             android:name=".BackgroundService"
             android:foregroundServiceType="location"
             android:exported="false" />
 
-        <!-- Login Activity -->
+        <!-- Main Activities -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -43,22 +39,9 @@
             </intent-filter>
         </activity>
 
-        <!-- Register Activity -->
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="true" />
-
-        <!-- Driver QR + Tracking -->
-        <activity
-            android:name=".DriverQr"
-            android:exported="true" />
-
-        <!-- Student Tracker -->
-        <activity
-            android:name=".StudentTrack"
-            android:exported="true" />
-
+        <activity android:name=".RegisterActivity" android:exported="true" />
+        <activity android:name=".DriverScanActivity" android:exported="true" />
+        <activity android:name=".StudentMainActivity" android:exported="true" />
+        <activity android:name=".DriverMainActivity" android:exported="true" />
     </application>
-
-
 </manifest>
